--- a/style.css
+++ b/style.css
@@ -49,6 +49,28 @@
   }
   /*END HEADER*/
 
+  /*Gradient color*/
+  .transition {
+    background-color: #272822;
+    background-image: linear-gradient(326deg, #222 0%, #e74c3c 74%);
+  }
+
+
+  /*START ABOUT*/
+  .page-section {
+    padding: 6rem 0;
+    margin-left: 3rem;
+    margin-right: 3rem
+  }
+  .page-section .page-section-heading {
+    font-size: 2.25rem;
+    line-height: 2rem;
+  }
+  /*END ABOUT*/
+
+
+
+
 
   /*START FOOTER*/
   footer {
