--- a/style.css
+++ b/style.css
@@ -109,8 +109,19 @@
 
 
 .project:hover {
-  color: #ff7f50;
+  color: #e74c3c;
 }
+
+#section-text {
+  font-weight: 400;
+  color: white;
+  text-decoration: none;
+}
+
+#section-text:hover {
+  color: #e74c3c;
+}
+
 
 .project-image {
   height: calc(100% - 6.8rem);
@@ -123,6 +134,9 @@
   padding: 2rem 0.5rem;
 }
 /*END SECTIONS*/
+
+
+
 
 
 
@@ -141,3 +155,66 @@
   }
 
   /*END FOOTER*/
+
+
+  /*STARTS PORTFOLIO ITEMS*/
+  .page-section {
+    padding: 6rem 0;
+  }
+  .page-section .page-section-heading {
+    font-size: 2.25rem;
+    line-height: 2rem;
+  }
+  @media (min-width: 992px) {
+    .page-section .page-section-heading {
+      font-size: 3rem;
+      line-height: 2.5rem;
+    }
+  }
+
+  .portfolio .portfolio-item {
+    cursor: pointer;
+    position: relative;
+    display: block;
+    max-width: 25rem;
+    border-radius: 0.5rem;
+    overflow: hidden;
+  }
+  .portfolio .portfolio-item .portfolio-item-caption {
+    position: absolute;
+    top: 0;
+    left: 0;
+    transition: all 0.2s ease-in-out;
+    opacity: 0;
+    background-color: rgba(26, 188, 156, 0.9);
+  }
+  .portfolio .portfolio-item .portfolio-item-caption:hover {
+    opacity: 1;
+  }
+  .portfolio .portfolio-item .portfolio-item-caption .portfolio-item-caption-content {
+    font-size: 1.5rem;
+  }
+  
+  .portfolio-modal .portfolio-modal-title {
+    font-size: 2.25rem;
+    line-height: 2rem;
+  }
+
+  @media (min-width: 992px) {
+    .portfolio-modal .portfolio-modal-title {
+      font-size: 3rem;
+      line-height: 2.5rem;
+    }
+  }
+  .portfolio-modal .close {
+    position: absolute;
+    z-index: 1;
+    right: 1.5rem;
+    top: 1rem;
+    font-size: 3rem;
+    line-height: 3rem;
+    color: #1abc9c;
+    opacity: 1;
+  }
+
+  /*STARTS PORTFOLIO ITEMS*/
