--- a/style.css
+++ b/style.css
@@ -27,7 +27,7 @@
     width: 100%;
     max-width: 7rem;
     height: 0.25rem;
-    background-color: #2c3e50;
+    background-color: #e74c3c;
     border-radius: 1rem;
     border-color: #2c3e50 !important;
   }
@@ -158,6 +158,9 @@
 
 
   /*STARTS PORTFOLIO ITEMS*/
+  .main-color {
+    color: #e74c3c;
+  }
   .page-section {
     padding: 6rem 0;
   }
@@ -186,7 +189,7 @@
     left: 0;
     transition: all 0.2s ease-in-out;
     opacity: 0;
-    background-color: rgba(26, 188, 156, 0.9);
+    background-color: #e74c3c;
   }
   .portfolio .portfolio-item .portfolio-item-caption:hover {
     opacity: 1;
@@ -213,7 +216,7 @@
     top: 1rem;
     font-size: 3rem;
     line-height: 3rem;
-    color: #1abc9c;
+    color: #e74c3c;
     opacity: 1;
   }
 
