--- a/style.css
+++ b/style.css
@@ -70,6 +70,10 @@
     text-align: center;
     padding: 0rem 2rem;
   }
+
+  #projects {
+    padding-top: 0;
+  }
   
   .projects-section-header {
     max-width: 640px;
