--- a/style.css
+++ b/style.css
@@ -65,7 +65,7 @@
   /*END HEADER*/
 
 
-   /*START SECTIONS*/
+/*START SECTIONS*/
   .projects-section {
     text-align: center;
     padding: 0rem 2rem;
@@ -136,8 +136,8 @@
 /*END SECTIONS*/
 
 
- /*START ABOUT*/
- .page-section {
+/*START ABOUT*/
+.page-section {
   padding: 6rem 0;
   margin-left: 3rem;
   margin-right: 3rem
@@ -148,7 +148,9 @@
 }
 /*END ABOUT*/
 
-
+#avatar-about {
+  width: 17rem;
+}
 
 /*START FOOTER*/
   footer {
