update text about section

--- a/style.css
+++ b/style.css
@@ -148,9 +148,6 @@
 }
 /*END ABOUT*/
 
-#avatar-about {
-  width: 17rem;
-}
 
 /*START FOOTER*/
   footer {
@@ -169,6 +166,16 @@
 /*END FOOTER*/
 
 /**********************************END INDEX***********************************/
+
+
+
+/**********************************START ABOUT***********************************/
+#avatar-about {
+  width: 18rem;
+}
+
+/**********************************END ABOUT***********************************/
+
 
 
 /**********************************START SOFTWARE***********************************/
