--- a/style.css
+++ b/style.css
@@ -88,7 +88,7 @@
   width: 100%;
   max-width: 1280px;
   margin: 0 auto;
-  margin-bottom: 4rem;
+  
 }
 
 @media (max-width: 30.625em) {
@@ -252,6 +252,7 @@
   width: 100%;
   height: 30vh;
   padding: 0 2rem;
+  margin-top: 0;
   }
 
 .contact-section-header > h2 {
