--- a/style.css
+++ b/style.css
@@ -93,8 +93,10 @@
 
 @media (max-width: 30.625em) {
   .projects-section {
-    padding: 6rem 1rem;
+    padding: 1rem 1rem;
   }
+
+ 
 
   .projects-grid {
     grid-template-columns: 1fr;
@@ -163,7 +165,7 @@
 .page-section {
   padding: 6rem 0;
   margin-left: 3rem;
-  margin-right: 3rem
+  margin-right: 3rem;
 }
 .page-section .page-section-heading {
   font-size: 2.25rem;
@@ -250,7 +252,7 @@
   align-items: center;
   text-align: center;
   width: 100%;
-  height: 30vh;
+  /*height: 30vh;*/
   padding: 0 2rem;
   margin-top: 0;
   }
@@ -274,7 +276,7 @@
   justify-content: center;
   width: 100%;
   max-width: 980px;
-  margin-top: 4rem;
+  margin-top: 2rem;
   flex-wrap: wrap;
 }
 
