--- a/style.css
+++ b/style.css
@@ -159,16 +159,14 @@
 
 
 /**********************************START ABOUT***********************************/
-#avatar-about {
-  width: 17rem;
-}
-.page-section {
-  padding: 6rem 0;
 
+#about-photo {
+  height: 18rem;
+  margin: 0 auto 3rem auto;
 }
-.page-section .page-section-heading {
-  font-size: 2.25rem;
-  line-height: 2rem;
+
+.font-about {
+  font-size: 1.2rem;
 }
 
 /**********************************END ABOUT***********************************/
