--- a/bootstrap.css
+++ b/bootstrap.css
@@ -161,13 +161,13 @@ sup {
 }
 
 a {
-  color: #00bc8c;
+  color: #e74c3c;
   text-decoration: none;
   background-color: transparent;
 }
 
 a:hover {
-  color: #007053;
+  color: #e12e1c;
   text-decoration: underline;
 }
 
