--- a/style.css
+++ b/style.css
@@ -287,3 +287,13 @@
   transform: translateY(8px);
   color: #e74c3c;
 }
+
+/**********************************START PRESENTATIONS & PUBLICATIONS***********************************/
+
+.reference-indent {
+  text-indent: -2em;
+}
+
+
+
+/**********************************START PRESENTATIONS & PUBLICATIONS***********************************/
