change font size of titles

--- a/style.css
+++ b/style.css
@@ -294,5 +294,8 @@
   text-indent: -2em;
 }
 
+.reference-title {
+  font-size: 2.5rem;
+}
 
 /**********************************START PRESENTATIONS & PUBLICATIONS***********************************/
