--- a/style.css
+++ b/style.css
@@ -296,7 +296,7 @@
 
 .reference-title {
   font-size: 2.3rem;
-  line-height: 2.75rem;
+  /*line-height: 2.3rem;*/
 }
 
 /**********************************START PRESENTATIONS & PUBLICATIONS***********************************/
