change titles to lower case

--- a/style.css
+++ b/style.css
@@ -294,9 +294,9 @@
   text-indent: -2em;
 }
 
-.reference-title {
+/*.reference-title {
   *font-size: 2rem;
-  /*line-height: 2.3rem;*/
-}
+  /*line-height: 2.3rem;
+}*/
 
 /**********************************START PRESENTATIONS & PUBLICATIONS***********************************/
