add research section

--- a/style.css
+++ b/style.css
@@ -296,3 +296,11 @@
 }
 
 /**********************************START PRESENTATIONS & PUBLICATIONS***********************************/
+.research-text {
+  font-size: 1.1rem;
+}
+
+/**********************************START RESEARCH***********************************/
+
+
+/**********************************END RESEARCH***********************************/
