--- a/style.css
+++ b/style.css
@@ -296,11 +296,20 @@
 }
 
 /**********************************START PRESENTATIONS & PUBLICATIONS***********************************/
+
+
+/**********************************START RESEARCH***********************************/
 .research-text {
   font-size: 1.1rem;
 }
 
-/**********************************START RESEARCH***********************************/
-
-
 /**********************************END RESEARCH***********************************/
+
+
+#myBtn {
+  display: none;
+  position: fixed;
+  bottom: 30px;
+  right: 30px;
+  z-index: 99;
+}
