--- a/style.css
+++ b/style.css
@@ -12,6 +12,16 @@
     color: #e74c3c;
   }
 
+/*top down button*/
+#myBtn {
+  display: none;
+  position: fixed;
+  bottom: 30px;
+  right: 30px;
+  z-index: 99;
+}
+
+
 /********************************END GLOBAL DECLARATIONS********************************/
 
 /********************************START INDEX********************************/
@@ -307,10 +317,7 @@
 
 
 
-#myBtn {
-  display: none;
-  position: fixed;
-  bottom: 30px;
-  right: 30px;
-  z-index: 99;
+.community-photo {
+  height: 18rem;
+  margin: 0 auto 3rem auto;
 }
