make search function JQeuery

--- a/style.css
+++ b/style.css
@@ -312,10 +312,12 @@
 /**********************************END RESEARCH***********************************/
 
 
-
+/**********************************START COMMUINITY PROJECT***********************************/
 .community-photo {
   height: auto;
   max-width: 600px;
   width: 85%;
   margin: 0 auto 3rem auto;
 }
+
+/**********************************END COMMUINITY PROJECT***********************************/
