remove color from contact frame

--- a/style.css
+++ b/style.css
@@ -328,3 +328,11 @@
 }
 
 /**********************************END COMMUINITY PROJECT***********************************/
+
+
+/**********************************START CONTACT***********************************/
+.contact {
+  background-color: #222;
+}
+
+/**********************************END CONTACT***********************************/
