reduce font size community projects

--- a/style.css
+++ b/style.css
@@ -327,6 +327,10 @@
   margin: 0 auto 3rem auto;
 }
 
+.community-text {
+  font-size: 2.2rem;
+}
+
 /**********************************END COMMUINITY PROJECT***********************************/
 
 
