add media query for titles research

--- a/style.css
+++ b/style.css
@@ -320,6 +320,11 @@
   font-size: 1.1rem;
 }
 
+@media  only screen and (max-width: 600px){
+  .responsive-title h2 {
+    font-size: 2rem;
+  }
+}
 /**********************************END RESEARCH***********************************/
 
 
