--- a/style.css
+++ b/style.css
@@ -340,8 +340,13 @@
 
 
 /**********************************START CONTACT***********************************/
-.contact {
+#contact-form {
   background-color: #222;
 }
 
+@media only screen and (max-width: 600px){
+  .typeform-widget {
+    height: 300px;
+  }
+}
 /**********************************END CONTACT***********************************/
